--- a/presentation.html
+++ b/presentation.html
@@ -36,7 +36,8 @@
                 price: "$4,000",
                 size: "0.25 ha (2500m2)",
                 distance: "65 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
+                link: "https://sites.google.com/view/zelenky/zelenky-village-land-details",
+                visible: true
             },
             {
                 coords: [50.48332, 29.64154],
@@ -44,7 +45,8 @@
                 price: "$5,500",
                 size: "0.25 ha (2500m2)",
                 distance: "50 km",
-                link: "https://docs.google.com/presentation/d/1tq3_YcNrmaI5aVvmYQ6rsT0TlZp0FKYfH4FgVAgB4G8/edit#slide=id.g31f79261bd1_0_47"
+                link: "https://sites.google.com/view/nezhylovychi/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0",
+                visible: true
             },
             {
                 coords: [49.9917147, 29.5734291],
@@ -52,7 +54,8 @@
                 price: "$10,000",
                 size: "0.17 ha (1700m2)",
                 distance: "104 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
+                link: "https://sites.google.com/view/dm-1001/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0",
+                visible: false // Участок скрыт
             },
             {
                 coords: [49.818270, 30.991137],
@@ -60,55 +63,8 @@
                 price: "$4,500",
                 size: "0.23 ha (2300m2)",
                 distance: "61 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [49.955210, 29.670018],
-                name: "Stavyshche Village - Waterfront Land Plot with Artificial Pond",
-                price: "$5,000",
-                size: "0.25 ha (2500m2)",
-                distance: "80 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [50.483384, 29.715970],
-                name: "Nalyvaikivka Village - Small and Affordable Land Plot Near Kyiv",
-                price: "$4,500",
-                size: "0.13 ha (1300m2)",
-                distance: "44 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [49.872386, 29.305616],
-                name: "Makarivka Village - Spacious Land Plot with House and Farming Potential",
-                price: "$5,000",
-                size: "0.13 ha (1300m2)",
-                distance: "121 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [50.175413, 29.918489],
-                name: "Dorohoinka Village - Close to Kyiv Lakeside Plot with Potential",
-                price: "$6,000",
-                size: "0.25 ha (2500m2)",
-                distance: "55 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [49.846565, 30.347024],
-                name: "Mala Antonivka Village - Spacious Waterfront Land with Lake Access",
-                price: "$7,500",
-                size: "0.25 ha (2500m2)",
-                distance: "57 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
-            },
-            {
-                coords: [49.629437, 30.123123],
-                name: "Ozerna Village - Land Plot with House in Livable Condition and Small River Access",
-                price: "$5,500",
-                size: "0.25 ha (2500m2)",
-                distance: "121 km",
-                link: "https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/present#slide=id.YOUR_SLIDE_ID"
+                link: "https://sites.google.com/view/dm-1002/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0",
+                visible: true
             }
         ];
 
@@ -123,23 +79,27 @@
             zoomOffset: -1
         }).addTo(map);
 
-        // Collect coordinates of all plots
-        var bounds = plots.map(plot => plot.coords);
+        // Collect coordinates of visible plots
+        var bounds = plots.filter(plot => plot.visible).map(plot => plot.coords);
 
-        // Automatically adjust zoom so all plots fit in view
-        map.fitBounds(bounds, { padding: [50, 50] });
+        // Automatically adjust zoom so all visible plots fit in view
+        if (bounds.length > 0) {
+            map.fitBounds(bounds, { padding: [50, 50] });
+        }
 
-        // Add markers to the map
+        // Add markers only for visible plots
         plots.forEach(plot => {
-            L.marker(plot.coords)
-                .addTo(map)
-                .bindPopup(`
-                    <b>${plot.name}</b><br>
-                    Price: ${plot.price}<br>
-                    Size: ${plot.size}<br>
-                    Distance to Kyiv: ${plot.distance}<br>
-                    <a href="#" onclick="window.open('${plot.link}', '_blank'); return false;">More details</a>
-                `);
+            if (plot.visible) {
+                L.marker(plot.coords)
+                    .addTo(map)
+                    .bindPopup(`
+                        <b>${plot.name}</b><br>
+                        Price: ${plot.price}<br>
+                        Size: ${plot.size}<br>
+                        Distance to Kyiv: ${plot.distance}<br>
+                        <a href="#" onclick="window.location.href='${plot.link}'; return false;">More details</a>
+                    `);
+            }
         });
     </script>
 </body>
